objects/EOY_Progress__c.object
<CustomObject>
    <description>This object is used to determine the current completion progress in the EOY Wizard.</description>
    <fields>
        <fullName>Attendance_Wizard_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendance Wizard Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendance_Wizard_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendance Wizard Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Behavior_Wizard_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Behavior Wizard Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Behavior_Wizard_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Behavior Wizard Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documents_Wizard_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documents Wizard Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documents_Wizard_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documents Wizard Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOY_Export_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reminder as best practice to export schools&apos; data.</description>
        <inlineHelpText>This will be checked when data and reports are successfully exported.</inlineHelpText>
        <label>EOY Export Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOY_Export_Last_Modified__c</fullName>
        <description>To keep track of the individual who last modified, the time, and the date.</description>
        <inlineHelpText>Last user to modify and the time.</inlineHelpText>
        <label>EOY Export Last Modified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOY_Next_School_Year_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Create the next school year here or potentially in the school setup wizard.</description>
        <inlineHelpText>This will be checked if the next school year is created.</inlineHelpText>
        <label>EOY Next School Year Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOY_Next_School_Year_Last_Modified__c</fullName>
        <description>To keep track of the individual who last modified, the time, and date.</description>
        <inlineHelpText>Last user to modify and the time.</inlineHelpText>
        <label>EOY Next School Year Last Modified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOY_Purge_Settings_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customizing the Purge Settings for the entire org.</description>
        <inlineHelpText>This is set to true if the EOY Purge custom settings are configured for the year.</inlineHelpText>
        <label>EOY Purge Settings Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOY_Purge_Settings_Last_Modified__c</fullName>
        <description>To keep track of the individual who last modified, the time, and date.</description>
        <inlineHelpText>Last user to modify and the time.</inlineHelpText>
        <label>EOY Purge Settings Last Modified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gradebook_Type_Finalized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gradebook Type Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gradebook_Wizard_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gradebook Wizard Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gradebook_Wizard_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gradebook Wizard Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module_Name__c</fullName>
        <label>Module Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Progress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the parent progress tracking record for this record.</description>
        <label>Parent Progress</label>
        <referenceTo>EOY_Progress__c</referenceTo>
        <relationshipLabel>EOY Progresses</relationshipLabel>
        <relationshipName>EOY_Progresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purge_Historical_Data_Last_Modified__c</fullName>
        <description>To keep track of the individual who last modified, the time, and the date.</description>
        <inlineHelpText>Last user to modify and the time.</inlineHelpText>
        <label>Purge Historical Data Last Modified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Grade_Span_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select the grade span for the school.</description>
        <inlineHelpText>This will be checked when the grade span has been confirmed for the next school year.</inlineHelpText>
        <label>School Grade Span Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Grade_Span_Last_Modified__c</fullName>
        <description>To keep track of the individual who last modified, the time, and the date.</description>
        <inlineHelpText>Last user to modify and the time.</inlineHelpText>
        <label>School Grade Span Last Modified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Next_Year_Students_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Schools will create the next year student records here.</description>
        <inlineHelpText>This will be checked when the net new student records are generated for the next year.</inlineHelpText>
        <label>School Next Year Students Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Next_Year_Students_Last_Modified__c</fullName>
        <description>To keep track of the individual who last modified, the time, and the date.</description>
        <inlineHelpText>Last user to modify and the time.</inlineHelpText>
        <label>School Next Year Students Last Modified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Process_Data_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Schools will process the EOY data, where records will get deactivated and archived.</description>
        <inlineHelpText>This will be checked when the EOY Data is deactivated and archived has been verified.</inlineHelpText>
        <label>School Process Data Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Process_Data_Last_Modified__c</fullName>
        <description>To keep track of the individual who last modified, the time, and the date.</description>
        <inlineHelpText>Last user to modify and the time.</inlineHelpText>
        <label>School Process Data Last Modified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Purge_EOY_Data_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>School EOY Data purge process.</description>
        <inlineHelpText>This will be checked when the EOY Data has successfully been purged.</inlineHelpText>
        <label>School Purge EOY Data Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Purge_EOY_Data_Last_Modified__c</fullName>
        <description>To keep track of the individual who last modified, the time, and the date.</description>
        <inlineHelpText>Last user to modify and the time.</inlineHelpText>
        <label>School Purge EOY Data Last Modified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Purge_Historical_Data_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>School process to purge historical data.</description>
        <inlineHelpText>This will be checked when Historical Data has been successfully purged.</inlineHelpText>
        <label>School Purge Historical Data Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Selections_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In the setup wizard, schools must make selections indicating their preferences for the school year.  This field indicates whether these selections have been completed.</description>
        <label>School Selections Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Snapshots_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Schools will create snapshot records for the year.</description>
        <inlineHelpText>This will be checked when snapshots are successfully created for the year.</inlineHelpText>
        <label>School Snapshots Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Snapshots_Last_Modified__c</fullName>
        <description>To keep track of the individual who last modified, the time, and the date.</description>
        <inlineHelpText>Last user to modify and the time.</inlineHelpText>
        <label>School Snapshots Last Modified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Student_Promotional_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set the students&apos; promotional status for the following year.</description>
        <inlineHelpText>This will be checked when the student&apos;s record is verified for: Intent to return, Promoted, Next year School, and Final Grade Level.</inlineHelpText>
        <label>School Student Promotional Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Student_Promotional_Last_Modified__c</fullName>
        <description>To keep track of the individual who last modified, the time, and the date.</description>
        <inlineHelpText>Last user to modify and the time.</inlineHelpText>
        <label>School Student Promotional Last Modified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required to keep track of the EOY progression for a school.</description>
        <inlineHelpText>This field is required for EOY Progression on schools.</inlineHelpText>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EOY Progresses</relationshipLabel>
        <relationshipName>EOY_Progresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Setup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to the setup record, since a setup represents an active configuration for a school.</description>
        <inlineHelpText>Determine the progress for an active setup to a school.</inlineHelpText>
        <label>Setup</label>
        <referenceTo>Setup__c</referenceTo>
        <relationshipLabel>EOY Progresses</relationshipLabel>
        <relationshipName>EOY_Progresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The year that the EOY Wizard process is for.</description>
        <inlineHelpText>The year for the EOY Wizard to process.</inlineHelpText>
        <label>Year</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>EOY Progresses</relationshipLabel>
        <relationshipName>EOY_Progresses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>EOY Progress</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>School__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Setup__c</columns>
        <columns>Year__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Progress</fullName>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>School__c</columns>
        <columns>Year__c</columns>
        <columns>Setup__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Progress</label>
    </listViews>
    <nameField>
        <label>EOY Save State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EOY Progresses</pluralLabel>
    <recordTypes>
        <fullName>EOY</fullName>
        <active>true</active>
        <label>EOY</label>
    </recordTypes>
    <recordTypes>
        <fullName>Setup_Wizard</fullName>
        <active>true</active>
        <label>Setup Wizard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>