objects/EOY_Progress__c/listViews/All_Progress.listView-meta.xml
<ListView>
    <fullName>All_Progress</fullName>
    <columns>OBJECT_ID</columns>
    <columns>RECORDTYPE</columns>
    <columns>School__c</columns>
    <columns>Year__c</columns>
    <columns>Setup__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Progress</label>
</ListView>